--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2630,108 +2630,107 @@ stories:
   domain: http://www.aspentimes.com/
   link: https://www.aspentimes.com/news/parts-of-highway-north-of-rifle-washes-out-road-closed-to-state-park/
 images:
-- name: stories-new-32-161-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-32-161-800-500-0-max-0--5--1.jpg
-- name: gypsymosaic-gypsy-eyes-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-nazi-poster.jpg
-- name: christianity-christianity-under-construction-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-emily-carr.jpg
-- name: school-clouds-church-clouds-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kandinsky-bv.jpg
-- name: old-school-house-old-schoolhouse-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-atari-asteroids.jpg
-- name: 35201856153_61bc075e4b-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-scream.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-propaganda-leaflets.jpg
-- name: ellis-island-ellis-island-room-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-yellow-collage.jpg
-- name: server-cloud-server-racks-door-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-kandinsky-bv.jpg
-- name: old-door-lock-old-door-lock-2-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sand-paper.jpg
-- name: stories-containership-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-dali-three.jpg
-- name: old-school-house-old-schoolhouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse.jpg
-- name: containership-containership-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-space-pizza.jpg
-- name: yosemite-yosemite-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-colorful-dream.jpg
-- name: downtheline-downtheline-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dali-three.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-internet-numbers.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-internet-numbers.JPG
-- name: aws-s3-stories-old-gas-pumps.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-gas-pumps.jpg
-- name: legal-statue-legalstatue-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-two.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
-- name: fence-mexico-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crabapple.jpg
-- name: nyc-flag-nycflag-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-crunch-paper.jpg
-- name: christianity-christianity-under-construction-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-neo-instinct.jpg
-- name: ellis-island-ellisisland-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-really-hot.jpg
-- name: old-door-lock-old-door-lock-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kand-two.jpg
-- name: bluelake-hot-spicy-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-01-17-38.jpg
-- name: flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
-- name: windowmountain-window-mountain-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-gred-mash.jpg
-- name: beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
-- name: beach-clouds-lifeguard-beachclouds-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-brush.jpg
-- name: mistywoods-babyfoot-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-ww2-dresden.jpg
-- name: power-lines-power-lines-empty-space-copper-circuit copy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-copper-circuit
-    copy.jpg
-- name: downtheline-downtheline-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crafty-painting.jpg
-- name: locked-up-steam-lock-up-steam-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-yellow-collage.jpg
-- name: beach-rocks-beach-rocks-currents-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-two.jpg
-- name: miamibeach-miamibeach-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-bright-sand.jpg
-- name: nazi-invasion-IMG_6170.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6170.jpg
-- name: razorwire-DSC-0080-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colorful-dream.jpg
-- name: mosaic-face-mosaic-face-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-attack-planes.jpg
-- name: miamibeach-miamibeach-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colorful-dream.jpg
-- name: oldsmallboat-oldsmallboat-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-granite.jpg
-- name: school-clouds-church-clouds-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-light-dali.jpg
-- name: old-school-house-old-schoolhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-diego-rivera1.jpg
-- name: old-door-lock-old-door-lock-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-mucha-mult.jpg
-- name: razorwire-DSC-0080-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-hot-spicy.jpg
-- name: locked-up-steam-lock-up-steam-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-light-dali.jpg
-- name: oldhouse-granaryfield-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-crafty-painting.jpg
-- name: mistywoods-babyfoot-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-deep-connections.jpg
-- name: cargo-ship-cargo-ship-on-sea-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-deep-connections.jpg
-- name: file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-00-00.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-brush.jpg
-- name: oldsmallboat-oldsmallboat-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-umberto-bocc.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+- name: victoria-victoria-corner-hotel-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-atari-asteroids.jpg
+- name: white-house-lawn-white-house-window-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-oily-mcoilface.jpg
+- name: dragon-desert-desert-dragon-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-alberto-giacometti.jpg
+- name: file-00_00_15_87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_15_87.jpg
+- name: mistywoods-babyfoot-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-spagetti-accident.jpg
+- name: old-barn-old-barn-1500-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colorful-blocks.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-4.jpg
+- name: white-house-lawn-white-house-window-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-matrix.jpg
+- name: status-berlin-status-berlin-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-emily-carr.jpg
+- name: razorcliff-razorcliff-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purple-pond.jpg
+- name: server-cloud-server-racks-clouds-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crafty-painting.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
+- name: crow_light_dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_light_dali.jpg
+- name: stories-new-statue-face-open-mouth-copper-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-statue-face-open-mouth-copper-circuit.png
+- name: server-racks-door-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-marcel-duchamp.jpg
+- name: oldhotel-oldhotel-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-neo-instinct.jpg
+- name: power-lines-power-lines-empty-space-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-wols.jpg
+- name: death-valley-death-valley-national-park-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-constitution.jpg
+- name: oldsmallboat-oldsmallboat-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-storm.jpg
+- name: old-cabin-oldcabin-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sand-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-diego-rivera1.jpg
+- name: dc-statue-dcstatue-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-monet-one.jpg
+- name: trucksilo-trucksilo-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-space-pizza.jpg
+- name: carry-load-carryload-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-matrix.jpg
+- name: eduardo-eduardo-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purple-storm.jpg
+- name: paris-paris-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-diego-rivera1.jpg
+- name: old-door-lock-old-door-lock-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-umberto-bocc.jpg
+- name: old-door-lock-old-door-lock-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit-4.jpg
+- name: death-valley-death-valley-national-park-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-neo-instinct.jpg
+- name: dragon_close-up-leaflets-of-the-russian-revolution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-leaflets-of-the-russian-revolution.jpg
+- name: bluelake-oily-mcoilface-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-38-67.jpg
+- name: powerlines-power-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-satan-red.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-dresden.jpg
+- name: mediterranean-mediterranean-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dali-three.jpg
+- name: window-window-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-granite.jpg
+- name: sand-hand-sand-hand-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-colorful-dream.jpg
+- name: abe-lincoln-one-purp-paper-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-15-87.jpg
+- name: berlinwall-DSC-0084-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-sand-paper.jpg
+- name: store-on-corner-oldcabin-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-three.jpg
+- name: gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
+- name: downtown-los-angeles-downtown-la-kandinsky-bv.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-kandinsky-bv.JPG
+- name: school-clouds-church-clouds-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-really-hot.jpg
+- name: aws-s3-stories-christianity-under-construction-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-christianity-under-construction-copper-circuit.jpg
+- name: ellis-island-ellisisland-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-clean-view.jpg
+- name: gypsymosaic-gypsy-eyes-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-clean-view.jpg
+- name: oldcabin-store-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-sunday.jpg
+- name: ellis-island-ellisisland-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crafty-painting.jpg
+- name: server-cloud-server-racks-door-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-atari-asteroids.jpg
+- name: christianity-christianity-under-construction-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-collage.jpg
 ---
 Does Apple Make The Best Phone?.&nbsp;Camila Cabello Has 'rare' Relationship With Shawn Mendes.&nbsp;China Keeping A Frustrated Trump Waiting On Agriculture.&nbsp;Hearing Scheduled For Paint Township Man Who Confessed To Strangling Wife.&nbsp;Pence Acknowledges 'tough Stuff' At Border Detention Center.&nbsp;Jerry Hollendorfer's Assistant Trainer Applies For Del Mar Stall Space.&nbsp;Two Arrested After Three Missing Tennessee Children Were Found Safe In Central Minnesota.&nbsp;Pence Acknowledges 'tough Stuff' At Border Detention Center.&nbsp;
